Bug 487702 - WindowHeap window draw calls depend on draw calls of current desktop (freezes windows from other desktops until current desktop updates) #2
Summary: WindowHeap window draw calls depend on draw calls of current desktop (freezes...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-overview (other bugs)
Version First Reported In: 6.0.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-28 17:30 UTC by postix
Modified: 2024-05-29 15:06 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2024-05-28 17:30:17 UTC
SUMMARY

This is essentially the same bug as  https://bugs.kde.org/show_bug.cgi?id=456280, which somehow got fixed at least for one person in Plasma 6.0.4 Wayland.

For me windows are still not redrawn within the WindowHeap effect on two fully independent systems and installations,
when they reside on a virtual desktop, which is not the currently active one.

I've tested it with various applications such as Konsole (with htop), Firefox, Chromium and OBS Studio on Wayland only.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20240524
KDE Plasma Version: 6.0.4 Wayland
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.0
Kernel Version: 6.9.1-1-default (64-bit)
Graphics Platform: Wayland
Graphics Processor: AMD Radeon RX 580 Series

Fedora 40
Plasma 6.0.5. Wayland
Frameworks 6.2.0
Qt 6.7.0
Kernel 6.18
Graphics Platform: Wayland
Graphics Processor: AMD Vega
Comment 1 Zamundaaa 2024-05-28 18:18:26 UTC
Can confirm with Qt apps, but not with glxgears. I think it's because the window isn't considered exposed, so the apps don't render
Comment 2 David Redondo 2024-05-29 07:28:35 UTC
Still works with VLC
Comment 3 David Redondo 2024-05-29 07:30:49 UTC
And with firefox+youtube
Comment 4 Bug Janitor Service 2024-05-29 09:02:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5791
Comment 5 David Redondo 2024-05-29 12:18:03 UTC
Git commit cefcdf7db507d37fb720597f74f67691f1ff5362 by David Redondo.
Committed on 29/05/2024 at 12:02.
Pushed by davidre into branch 'master'.

Unset suspended state of windows that are marked for offscreen rendering

Otherwise some clients will not render anything even though we are
sending frame callbacks.
FIXED-IN:6.1

M  +2    -1    src/scene/windowitem.cpp
M  +9    -2    src/window.cpp
M  +2    -0    src/window.h

https://invent.kde.org/plasma/kwin/-/commit/cefcdf7db507d37fb720597f74f67691f1ff5362
Comment 6 postix 2024-05-29 12:38:59 UTC
\o/ Thank you! I will test it once 6.1 reaches me.
Comment 7 Vlad Zahorodnii 2024-05-29 15:06:02 UTC
Git commit 0e9b0fd4046908d609e243d57af896e2ce590359 by Vlad Zahorodnii, on behalf of David Redondo.
Committed on 29/05/2024 at 14:54.
Pushed by vladz into branch 'Plasma/6.1'.

Unset suspended state of windows that are marked for offscreen rendering

Otherwise some clients will not render anything even though we are
sending frame callbacks.
FIXED-IN:6.1


(cherry picked from commit cefcdf7db507d37fb720597f74f67691f1ff5362)

M  +2    -1    src/scene/windowitem.cpp
M  +9    -2    src/window.cpp
M  +2    -0    src/window.h

https://invent.kde.org/plasma/kwin/-/commit/0e9b0fd4046908d609e243d57af896e2ce590359