Unset suspended state of windows that are marked for offscreen rendering

Otherwise some clients will not render anything even though we are
sending frame callbacks.
BUG:487702
FIXED-IN:6.1


(cherry picked from commit cefcdf7db507d37fb720597f74f67691f1ff5362)